--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,7 +13,7 @@
   </script>
   <script src='/js/soundmanager2-jsmin.js' type='text/javascript' ></script>
   <script src='/js/site.js' type='text/javascript' ></script>
-  <script src='/js/bootstrap.min.js' type='text/javascript' ></script>
+  <script src='/js/bootstrap.js' type='text/javascript' ></script>
 </head>
 
   <div class='navbar navbar-fixed-top navbar-inverse'>
@@ -39,8 +39,8 @@
       <%= yield %>
 
       <footer>
-        <p>Daten: &copy; <%= Time.now.year %> <a href="http://wadoku-ev.de">Wadoku e.V.</a> | Programmierung: &copy; <%= Time.now.year %> Roger Braun</p>
-        <p>Code und Daten dieser Seite stehen unter offenen Lizenzen (CC und GPL). Beides findet sich auf <a href='https://github.com/WaDoku'>GitHub</a>.</p>
+        <p>Daten: &copy; <%= Time.now.year %> <a href="http://wadoku-ev.de">Wadoku e.V.</a> | Programmierung: &copy; <%= Time.now.year %> <a href="http://rbraun.net">Roger Braun</a></p>
+        <p>Code und Daten dieser Seite stehen unter offenen Lizenzen (CC und GPL). Beides findet sich auf <a href='https://github.com/Wadoku'>GitHub</a>.</p>
       </footer>
     </div>
   </div>
