--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -39,7 +39,7 @@
       <%= yield %>
 
       <footer>
-        <p>Daten: &copy; <%= Time.now.year %> <a href="http://wadoku-ev.de">Wadoku e.V.</a> | Programmierung: &copy; <%= Time.now.year %> <a href="http://rbraun.net">Roger Braun</a></p>
+        <p>Daten: &copy; <%= Time.now.year %> <a href="http://wadoku-ev.de">Wadoku e.V.</a> | Programmierung: &copy; <%= Time.now.year %> Roger Braun</p>
         <p>Code und Daten dieser Seite stehen unter offenen Lizenzen (CC und GPL). Beides findet sich auf <a href='https://github.com/Wadoku'>GitHub</a>.</p>
       </footer>
     </div>
