--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <title>WaDokuJT</title>
+  <title>WaDokuJT-STAGING</title>
   <link rel='stylesheet' href='<%= to "/css/#{@css}.css" %>' />
   <link rel='stylesheet' href='<%= to '/css/site.css' %>' />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
