make staging more visible

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -19,7 +19,7 @@
   <div class='navbar navbar-fixed-top navbar-inverse'>
     <div class='navbar-inner'>
       <div class='container'>
-        <a href='<%= to '/' %>' class='brand'>WaDokuJT</a>
+        <a href='<%= to '/' %>' class='brand'>WaDokuJT-STAGING</a>
         <ul class='nav pull-right'>
           <li><p class='navbar-text picky-counter'></p></li>
           <li>
