--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,16 +4,16 @@
   <title>WaDokuJT-STAGING</title>
   <link rel='stylesheet' href='<%= to "/css/#{@css}.css" %>' />
   <link rel='stylesheet' href='<%= to '/css/site.css' %>' />
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/1.0.0-rc.3/lodash.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.0/mustache.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js" type="text/javascript"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/1.0.0-rc.3/lodash.min.js" type="text/javascript"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/0.7.0/mustache.min.js" type="text/javascript"></script>
   <script type="text/x-mustache" id="entry-template"><%= @entry_template %></script>
-  <script>
+  <script type='text/javascript'>
     api_host = '<%= settings.api_host %>';
   </script>
-  <script src='/js/soundmanager2-jsmin.js'></script>
-  <script src='/js/site.js'></script>
-  <script src='/js/bootstrap.js></script>
+  <script src='/js/soundmanager2-jsmin.js' type='text/javascript' ></script>
+  <script src='/js/site.js' type='text/javascript' ></script>
+  <script src='/js/bootstrap.js' type='text/javascript' ></script>
 </head>
 
   <div class='navbar navbar-fixed-top navbar-inverse'>
@@ -31,6 +31,8 @@
         </div>
       </div>
     </div>
+  </div>
+
   <div class="container">
     <div class='content'>
 
