make title more descriptive

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <title>WaDokuJT</title>
+  <title>WaDokuJT Japanisch-Deutsches Wörterbuch</title>
   <link rel='stylesheet' href='<%= to "/css/#{@css}.css" %>' />
   <link rel='stylesheet' href='<%= to '/css/site.css' %>' />
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
