--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,9 +21,9 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/1.3.1/lodash.min.js" type="text/javascript"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/1.2.0/mustache.min.js" type="text/javascript"></script>
+  <script src="/js/jquery.min.js" type="text/javascript"></script>
+  <script src="/js/lodash.min.js" type="text/javascript"></script>
+  <script src="/js/mustache.min.js" type="text/javascript"></script>
   <script type="text/x-mustache" id="entry-template"><%= @entry_template %></script>
   <script type='text/javascript'>
     api_host = '<%= settings.api_host %>';
