Place GDPR declaration in separate Template

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -45,6 +45,9 @@
             </form>
           </li>
         </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="dsgvo">Datenschutzerklärung</a></li>
+        </ul>
         </div>
       </div>
     </div>
