--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -21,9 +21,9 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <script src="/js/jquery.min.js" type="text/javascript"></script>
-  <script src="/js/lodash.min.js" type="text/javascript"></script>
-  <script src="/js/mustache.min.js" type="text/javascript"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/1.3.1/lodash.min.js" type="text/javascript"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/1.2.0/mustache.min.js" type="text/javascript"></script>
   <script type="text/x-mustache" id="entry-template"><%= @entry_template %></script>
   <script type='text/javascript'>
     api_host = '<%= settings.api_host %>';
@@ -59,12 +59,9 @@
       <%= yield %>
 
       <footer>
-        <p>Daten: &copy; <%= Time.now.year %> <a href="https://wadoku-ev.de">Wadoku e.V.</a> | Programmierung: &copy; 2012 - <%= Time.now.year %> Roger Braun & Maximilian Maintz</p>
-        <p>Code und Daten dieser Seite stehen unter offenen Lizenzen (CC und GPL). Beides findet sich auf <a href='https://github.com/WaDoku'>GitHub</a>.</p>
-        <p><b>Allgemeine Datenschutzerklärung</b></p>
-        <p align="justify">Durch die Nutzung unserer Website erklären Sie sich mit der Erhebung, Verarbeitung und Nutzung von Daten gemäß der nachfolgenden Beschreibung einverstanden. Unsere Website kann grundsätzlich ohne Registrierung besucht werden. Dabei werden Daten wie beispielsweise aufgerufene Seiten bzw. Namen der abgerufenen Datei, Datum und Uhrzeit zu statistischen Zwecken auf dem Server gespeichert, ohne dass diese Daten unmittelbar auf Ihre Person bezogen werden. Personenbezogene Daten, insbesondere Name, Adresse oder E-Mail-Adresse werden soweit möglich auf freiwilliger Basis erhoben. Ohne Ihre Einwilligung erfolgt keine Weitergabe der Daten an Dritte. (Quelle für Datenschutzerklärung: Muster-Datenschutzerklärung von anwalt.de)</p>
-        <p><b>Datenschutzerklärung zu SSL</b></p>
-        <p align="justify">SSL-Verschlüsselung Um Ihre übermittelten Daten bestmöglich zu schützen nutzen die Websitebetreiber eine SSLVerschlüsselung. Sie erkennen derart verschlüsselte Verbindungen an dem Präfix “https://“ im Seitenlink in der Adresszeile Ihres Browsers. Unverschlüsselte Seite sind durch „http://“ gekennzeichnet. Sämtliche Daten, welche Sie an diese Website übermitteln – etwa bei Anfragen oder Logins – können dank SSL-Verschlüsselung nicht von Dritten gelesen werden. (Quelle: Muster von datenschutz.org)</p>
+        <p><small>Wörterbuchdaten: &copy; 1998–<%= Time.now.year %>. Die Urheberrechte liegen bei den jeweiligen Autoren der Artikel. Die Nutzung der Urheberrechte liegt bei Dr. Ulrich Apel und <a href="http://wadoku-ev.de">Wadoku e.V.</a>. </br>Die Nutzung der Daten ist möglich unter Creative Commons „Namensnennung“ (englisch: Attribution; by) und „Weitergabe unter gleichen Bedingungen“ (Share Alike; sa).</small></p>
+        <p><small>Programmierung der Website: &copy; 2012–<%= Time.now.year %>. Roger Braun & Maximilian Maintz. CC (by; sa) und GPL.</small></p>
+        <p><small>Code und Daten dieser Seite finden sich auf GitHub <a href='https://github.com/Wadoku'>GitHub</a>.</small></p>
       </footer>
     </div>
   </div>
